@@ -1,28 +1,10 @@
 {
-  "timestamp" : "2025-03-13T01:05:19Z",
-  "count_outdated" : 869,
-  "uniques_outdated" : 476,
-  "count" : 886,
-  "uniques" : 493,
+  "timestamp" : "2025-03-14T01:04:18Z",
+  "count_outdated" : 872,
+  "uniques_outdated" : 479,
+  "count" : 887,
+  "uniques" : 494,
   "clones" : [
-    {
-      "timestamp": "2025-02-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
-    {
-      "timestamp": "2025-02-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-03-01T00:00:00Z",
       "count": 2,
@@ -115,6 +97,15 @@
     },
     {
       "timestamp": "2025-03-12T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-03-13T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
