@@ -1,17 +1,7 @@
 {
-  "count": 16,
-  "uniques": 6,
+  "count": 15,
+  "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2025-02-27T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2025-02-28T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-03-01T00:00:00Z",
       "count": 2,
@@ -64,6 +54,11 @@
     },
     {
       "timestamp": "2025-03-12T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-03-13T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
